# mliot-embeddedc-2026-hw

week01/: buoi01_nguyenlehuuthoai.c
week02/: answer.txt  buoi02_nguyenlehuuthoai.c
week03/: answers.txt  build_and_flash.bat
week04/: answers.txt
week04/projectw4/: CMakeLists.txt  build_and_flash.bat  main.c
